# synaops

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
bench/: README.md  conftest.py  plot.py  requirements.txt  test_bench.py  test_parity.py
src/: json_schema_utils.rs  json_schema_utils_test.rs  json_utils.rs  json_utils_test.rs  lib.rs  nlp_utils.rs  nlp_utils_test.rs  regex_cache.rs
