[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "synaops"
version = "0.1.0"
description = "Native Rust implementations of synalinks JSON/schema operations."
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "synaops"
features = ["pyo3/extension-module"]
