[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "synaops"
version = "0.2.0"
description = "Native Rust implementations of synalinks JSON/schema operations."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Yoan Sallami", email = "synalinks@gmail.com" }]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/SynaLinks/synaops"
Repository = "https://github.com/SynaLinks/synaops"
Issues = "https://github.com/SynaLinks/synaops/issues"

[tool.maturin]
module-name = "synaops"
features = ["pyo3/extension-module", "pyo3/abi3-py310"]
